--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.357.0",
-    "next": "14.1.3",
+    "next": "^15.5.2",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
